--- a/GugideJoJo.html
+++ b/GugideJoJo.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section content5 cid-rJdp7a8rR4 mbr-parallax-background" id="content5-r">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><section class="mbr-section content5 cid-rJdp7a8rR4 mbr-parallax-background" id="content5-r">
 
     
 
