--- a/TheWeebMania.html
+++ b/TheWeebMania.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="cid-rJ41vHniT4" id="header2-8">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-rJ41vHniT4" id="header2-8">
 
     
 
