--- a/Top10bl.html
+++ b/Top10bl.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-rJr6jk737L mbr-parallax-background" id="content5-32">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-rJr6jk737L mbr-parallax-background" id="content5-32">
 
     
 
@@ -87,8 +87,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-10"><p>
-                <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em>mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-10">B.L. is an acronym for Boy's Love, a genre &nbsp;that involves two males or boys falling in love with each other. A Genre adored mosly by females, they are called fujoshi, and a small populace of males, called fudanshis.&nbsp;</div>
         </div>
     </div>
 </section>
